Fixed banner image gap problem

--- a/c/main.css
+++ b/c/main.css
@@ -139,7 +139,7 @@ em, i {
 }
 
 img {
-	max-width: 100%;
+	width: 100%;
 	float:left;
 }
 
